# Technology

./: .gitignore
ASPNetCore/: Configuration.txt
Angualr/: Advanced components and directives.txt  Angular_Routes.txt  Best practies.txt  RxJs.txt  ng Cli.txt  ts_command.txt
Architectures and Patterns/: ТЕРМИНЫ И ОПРЕДЕНИЕЯ.txt  ТЕРМИНЫ.docx
Avalonia/: By Linux Run.txt
C# Collections/: Коллекции.txt
CMake/GidUralClient_Bild/GidUralClient/: CMakeLists.txt  main.cpp
CMake/GidUralClient_Bild/GidUralClient/App/Actuator/: Actuator.h
CMake/GidUralClient_Bild/GidUralClient/App/GidUralProtocol/: GidUralProtocol.cpp  GidUralProtocol.h
CMake/GidUralClient_Bild/GidUralClient/App/NpkpValidator/: NpkpValidator.h
CMake/GidUralClient_Bild/GidUralClient/App/Parser/: Parser.cpp  Parser.h
CMake/GidUralClient_Bild/GidUralClient/Kafka/KafkaProducer/: KafkaProducer.h
CMake/GidUralClient_Bild/GidUralClient/Settings/: Settings.h
CMake/GidUralClient_Bild/GidUralClient/Shared/: Shared.cpp  Shared.h
CMake/GidUralClient_Bild/GidUralClient/TcpIpClient/: TcpIpClient.cpp  TcpIpClient.h
CMake/GidUralClient_Bild/GidUralClient/Tests/: MoqData.h
CMake/GidUral_CICD/step_1/: CMakeLists.txt
CMake/GidUral_CICD/step_1/centos/: Makefile
CMake/GidUral_CICD/step_1/src/: main.cpp  main.h
CMake/GidUral_CICD/step_1/src/App/Actuator/: Actuator.h
CMake/GidUral_CICD/step_1/src/App/ActuatorVm/: ActuatorVm.h
CMake/GidUral_CICD/step_1/src/App/GidUralProtocol/: GidUralProtocol.h
CMake/GidUral_CICD/step_1/src/App/NpkpValidator/: NpkpValidator.h
CMake/GidUral_CICD/step_1/src/App/Parser/: Parser.cpp  Parser.h
CMake/GidUral_CICD/step_1/src/Kafka/KafkaProducer/: KafkaProducer.h
CMake/GidUral_CICD/step_1/src/Settings/: Settings.h
CMake/GidUral_CICD/step_1/src/Shared/: Shared.cpp  Shared.h
CMake/GidUral_CICD/step_1/src/TcpIpClient/: TcpIpClient.cpp  TcpIpClient.h
CMake/GidUral_CICD/step_1/src/Tests/: MoqData.h
(+95 files in other folders)
